# pydantic-settings-external

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
pydantic_settings_external/: __init__.py  exceptions.py  types.py  utils.py  version.py
pydantic_settings_external/providers/: base.py  gcp.py
pydantic_settings_external/pydantic/: v1.py  v2.py
pydantic_settings_external/pydantic/v1/: __init__.py
pydantic_settings_external/pydantic/v2/: __init__.py
tests/: test_pydantic_v2.py
