[project]
name = "pydantic-settings-external"
version = "0.1.0"
description = "PyDantic Settings External is a library that extends PyDantic Settings to support various types of external configuration providers, such as GCP Secret Manager and AWS Secrets Manager. PyDantic Settings External has been developed using a clear abstraction, allowing for easy extension to external configurations not yet incorporated into the library by the community."
requires-python = ">=3.7"
authors = [
  { name="Ali Aliyev", email="ali@aliev.me" },
]
readme = "README.md"
keywords = ["pydantic", "pydantic-settings"]
classifiers = ['Development Status :: 5 - Production/Stable',
               'Intended Audience :: Developers',
               'Programming Language :: Python',
               'License :: OSI Approved :: MIT License',
               'Natural Language :: English',
               'Operating System :: OS Independent',
               'Programming Language :: Python',
               'Programming Language :: Python :: 3',
               'Programming Language :: Python :: 3.8',
               'Programming Language :: Python :: 3.9',
               'Programming Language :: Python :: 3.10',
               'Framework :: AsyncIO',
               'Topic :: Software Development :: Libraries :: Python Modules',
               'Topic :: Utilities']


[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.version]
path = 'pydantic_settings_external/version.py'

[tool.ruff]
line-length = 120
extend-select = ['Q', 'RUF100', 'C90', 'UP', 'I', 'I001', 'I002', 'TD007']
flake8-quotes = {inline-quotes = 'single', multiline-quotes = 'double'}
mccabe = { max-complexity = 14 }
isort = { known-first-party = ['pydantic_settings', 'tests'] }
target-version = 'py37'

[project.optional-dependencies]
dev = [
  "pre-commit",
  "ruff",
]
